test/TestPhases/parser/invalid/importNotBlechId.blc

import mymod "17Y"

module

activity main()
end

